[package]
name = "app"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["input_loader", "models"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input_loader = { path = "./input_loader" }
y_2022 = { path = "./solutions/y_2022" }
models = { path = "./models" }
